--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+jclifford.sublime-project
+jclifford.sublime-workspace
+.gitignore
+
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -26,7 +31,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
